Fix height of icons on small screens
Where the attribution goes to two lines, there was a problem.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -293,7 +293,7 @@
   #mobile-icons {
 	display: inline-block;
 	position: absolute;
-	bottom: 15px;
+	bottom: 30px;
 	left: 0;
 	width: 100%;
   }
